# fix_connectivity

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
coinbase_market_data/: CMakeLists.txt  coinbase_md.cpp  coinbase_md_app.hpp  coinbase_md_session.cpp  coinbase_md_session.hpp
coinbase_order_execution/: CMakeLists.txt  coinbase_oe.cpp  coinbase_oe_session.cpp  coinbase_oe_session.hpp
event_manager/: CMakeLists.txt
event_manager/include/: app_options.hpp  application.hpp  event_manager.hpp  event_manager_interface.hpp  file_descriptor.hpp  logger.hpp  logger_options.hpp  timer.hpp
event_manager/src/: application.cpp  event_manager.cpp  logger.cpp  timer.cpp
example/: CMakeLists.txt  client.cpp  test_client.cpp  tuples.cpp
fix_lib/: CMakeLists.txt
fix_lib/include/: base64_hmac.h  client_connection.hpp  connection_interface.hpp  field.hpp  field_collection.hpp  field_value.hpp  fix_chars.hpp  fix_field.hpp  fix_group.hpp  fix_header.hpp  fix_message.hpp  fix_types.hpp  fix_values.hpp  lexical_cast.hpp  message.hpp  old_session.hpp  order_book.hpp  reader_buffer.hpp  sending_buffer.hpp  session.hpp  session_interface.hpp  session_options.hpp  session_state.hpp  socket_interface.hpp  ssl_socket.hpp  tag.hpp  tcp_socket.hpp  token_iterator.hpp  utils.hpp  version_selector.hpp  writer.hpp  writer_buffer.hpp
fix_lib/src/: base64_hmac.cpp  client_connection.cpp  field.cpp  field_collection.cpp  message.cpp  old_session.cpp  reader_buffer.cpp  session.cpp  session_state.cpp  ssl_socket.cpp  tcp_socket.cpp  token_iterator.cpp  utils.cpp
fix_lib/versions/: base.hpp
fix_lib/versions/v44/: header.hpp  messages.hpp
fix_lib/versions/v50sp2/: header.hpp  messages.hpp  version.hpp
redis/: CMakeLists.txt  redis_endpoint.hpp  redis_example.cpp
redis/include/: redis_endpoint.hpp
redis/src/: redis_endpoint.cpp
tests/: CMakeLists.txt  bench_test.cc  message_test.cc  session_test.cc
xml/Coinbase/marketdata/: FIX50.xml
